--- a/HotelBooking/src/main/resources/application-test.properties
+++ b/HotelBooking/src/main/resources/application-test.properties
@@ -1,6 +1,12 @@
-spring:
-datasource:
-url: jdbc:h2:mem:testdb
-jpa:
-hibernate:
-ddl-auto: create-drop
+spring.datasource.url=jdbc:h2:mem:hotelbooking_test_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.test.database.replace=ANY
+spring.main.allow-bean-definition-overriding=true
